--- a/appointment.html
+++ b/appointment.html
@@ -62,7 +62,7 @@
                                 <td>3:00pm</td>
                                 <td>Doc.Amazing</td>
                                 <td>ortopedics</td>
-                                <td>approved</td>
+                                <td>pending</td>
                                 <td>
                                     <input type="button" value="cancel" onclick="myFunction()" class="box">
                                     <input type="button" value="reschedule" onclick="myFunction1()" class="box">
@@ -84,7 +84,7 @@
                                 <td>3:00pm</td>
                                 <td>Doc.Amazing</td>
                                 <td>ortopedics</td>
-                                <td>approved</td>
+                                <td>canceled</td>
                                 <td>
                                     <input type="button" value="cancel" onclick="myFunction()" class="box">
                                     <input type="button" value="reschedule" onclick="myFunction1()" class="box">
@@ -95,7 +95,7 @@
                                 <td>3:00pm</td>
                                 <td>Doc.Amazing</td>
                                 <td>ortopedics</td>
-                                <td>approved</td>
+                                <td>pending</td>
                                 <td>
                                     <input type="button" value="cancel" onclick="myFunction()" class="box">
                                     <input type="button" value="reschedule" onclick="myFunction1()" class="box">
@@ -141,7 +141,7 @@
                     <input type="text" placeholder="name">
                     <label for="reason">Reason for appointment</label>
                     <input type="text" placeholder="reason">
-                    <a href="#" class="book-link">Book an appointment</a>
+                    <a href="#" class="book-link" id="bookanappointment" onclick="book()">Book an appointment</a>
                 </form>
             </div>
         </div>
