--- a/appointment.html
+++ b/appointment.html
@@ -145,8 +145,23 @@
                 </form>
             </div>
         </div>
+
+        <div class="chat-icon">
+            <img src="img/Message-Free-Icon-fidsw.png" alt="" id="image">
+            <img src="img/cancel.png" alt="" id="cancel" style="display:none;" >
+        </div>
+        <div class="chat-container" id="chat">
+            <div class="break">
+                <div class="chat-messages" id="chat-messages"></div>
+                <div class="chat-input">
+                    <input type="text" id="message-input" placeholder="Type your message...">
+                    <button id="send-button">Send</button>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 <script src="appointment.js"></script>
 <script src="app.js"></script>
+<script src="communicate.js"></script>
 </html>
