--- a/appointment.html
+++ b/appointment.html
@@ -106,13 +106,13 @@
                 </div>
             </div>
             <div class="appointment-image">
-                <img src="img/istockphoto-1342134434-612x612.jpg" alt="Doctor Image">
+                <img src="img/appointment 1.jpg" alt="Doctor Image">
             </div>
         </div>
 
         <div class="book-appointment">
             <div class="book-appointment-image">
-                <img src="img/istockphoto-1294678917-612x612.jpg" alt="Doctor's Image">
+                <img src="img/appointment2.jpg" alt="Doctor's Image">
             </div>
             <div class="book-appointment-data">
                 <p class="appointment-head">book an appointment</p>
